# NOvARwgt-public

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HACKING.md  INSTALL.md  README.md
cmake/Modules/: FindCET.cmake  FindCETLib.cmake  FindGENIE.cmake  FindNuSimData.cmake
data/: CMakeLists.txt  RPA2017.GENIE2-10.root  RPA2017.GENIE2-12.root  rw_empiricalMEC2017_syst.root  rw_empiricalMEC2018_RPAfix_nu.root  rw_empiricalMEC2018_RPAfix_nu_nonmec_qelike.root  rw_empiricalMEC2018_RPAfix_nu_nonmec_reslike.root  rw_empiricalMEC2018_RPAfix_nubar.root  rw_empiricalMEC2018_RPAfix_nubar_nonmec_qelike.root  rw_empiricalMEC2018_RPAfix_nubar_nonmec_reslike.root  rw_empiricalMEC2018_nu.root  rw_empiricalMEC2018_nubar.root  rw_empiricalMEC2018_nubarqelike_syst.root  rw_empiricalMEC2018_nubarreslike_syst.root  rw_empiricalMEC2018_nuqelike_syst.root  rw_empiricalMEC2018_nureslike_syst.root  rw_empiricalMECtoValencia_nu.root  rw_empiricalMECtoValencia_nubar.root  tufts_q3q0_xs_correction.root
inc/: CMakeLists.txt
inc/NOvARwgt/interfaces/: GenieInterface.h  NuToolsInterface.h
inc/NOvARwgt/rwgt/: EventRecord.h  ISystKnob.h  IWeightGenerator.h  Tune.h
inc/NOvARwgt/rwgt/generic/: NueNumuSysts.h
inc/NOvARwgt/rwgt/genie/: GenieKnobNames.h  GenieSystKnob.h
inc/NOvARwgt/rwgt/genie/COH/: COHSysts.h
inc/NOvARwgt/rwgt/genie/DIS/: HighWDISWeight.h  Nonres1piWeights.h  NonresPiSysts.h
inc/NOvARwgt/rwgt/genie/MEC/: EmpiricalMECFixups.h  EmpiricalMECOtherTunes.h  EmpiricalMECSysts2017.h  EmpiricalMECSysts2018.h  EmpiricalMECSystsBase.h  EmpiricalMECSystsSA.h  EmpiricalMECTune2017.h  EmpiricalMECTune2018.h  EmpiricalMECTuneBase.h  EmpiricalMECTuneSA.h
inc/NOvARwgt/rwgt/genie/QE/: MAQESysts.h  MAQEWgts.h  RPASysts.h  RPAWeights.h
inc/NOvARwgt/rwgt/tunes/: Tunes2017.h  Tunes2018.h  TunesSA.h
inc/NOvARwgt/test/: tests_common.h
inc/NOvARwgt/util/: Exceptions.h  GeneratorSupportConfig.h  Hash.h  HistWrapper.h  ITestGenVersion.h  InputVals.h  LazyROOTObjLoader.h  Registry.h  Registry.ixx
scripts/: CMakeLists.txt  PrintTestEvents.C  install_and_declare.sh  jenkins_build.sh
src/: CMakeLists.txt
src/interfaces/: GenieInterface.cxx  NuToolsInterface.cxx
src/rwgt/: EventRecord.cxx  Tune.cxx
src/rwgt/generic/: NueNumuSysts.cxx
src/rwgt/genie/: GenieInternalTools.cxx  GenieInternalTools.h  GenieSystKnob.cxx
src/rwgt/genie/COH/: COHSysts.cxx
src/rwgt/genie/DIS/: HighWDISWeight.cxx  Nonres1piWeights.cxx  NonresPiSysts.cxx
src/rwgt/genie/MEC/: EmpiricalMECFixups.cxx  EmpiricalMECOtherTunes.cxx  EmpiricalMECSysts2017.cxx  EmpiricalMECSysts2018.cxx  EmpiricalMECSystsSA.cxx  EmpiricalMECTune2017.cxx  EmpiricalMECTune2018.cxx  EmpiricalMECTuneBase.cxx  EmpiricalMECTuneSA.cxx
src/rwgt/genie/QE/: MAQESysts.cxx  MAQEWgts.cxx  RPASysts.cxx  RPAWeights.cxx
src/rwgt/tunes/: Tunes2017.cxx  Tunes2018.cxx  TunesSA.cxx
src/test/: CMakeLists.txt  genie_test.cxx  hash_test.cxx  nutools_test.cxx  standalone_test.cxx
src/util/: GeneratorSupportConfig.cxx  HistWrapper.cxx  InputVals.cxx  LazyROOTObjLoader.cxx  Registry.cxx
ups/: CMakeLists.txt  novarwgt.table
